--- a/data_preparation_WIP.ipynb
+++ b/data_preparation_WIP.ipynb
@@ -27,7 +27,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mialondon/llm-lod-enriching-heritage/blob/main/data_preparation_WIP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/pelagios/llm-lod-enriching-heritage/blob/main/data_preparation_WIP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -103,19 +103,16 @@
         },
         "collapsed": true,
         "id": "xfXZmOFrskIi",
-        "outputId": "48fed38d-48df-43fb-f8ff-0a3295ce7194"
+        "outputId": "99df3364-51e2-4592-d4e7-95415f094bcd"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Requirement already satisfied: spacy in /usr/local/lib/python3.12/dist-packages (3.8.7)\n",
-            "Collecting langid\n",
-            "  Downloading langid-1.1.6.tar.gz (1.9 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.9/1.9 MB\u001b[0m \u001b[31m36.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: langid in /usr/local/lib/python3.12/dist-packages (1.1.6)\n",
             "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /usr/local/lib/python3.12/dist-packages (from spacy) (3.0.12)\n",
             "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /usr/local/lib/python3.12/dist-packages (from spacy) (1.0.5)\n",
             "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /usr/local/lib/python3.12/dist-packages (from spacy) (1.0.13)\n",
@@ -156,14 +153,7 @@
             "Requirement already satisfied: markdown-it-py>=2.2.0 in /usr/local/lib/python3.12/dist-packages (from rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy) (4.0.0)\n",
             "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /usr/local/lib/python3.12/dist-packages (from rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy) (2.19.2)\n",
             "Requirement already satisfied: wrapt in /usr/local/lib/python3.12/dist-packages (from smart-open<8.0.0,>=5.2.1->weasel<0.5.0,>=0.1.0->spacy) (1.17.3)\n",
-            "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.12/dist-packages (from markdown-it-py>=2.2.0->rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy) (0.1.2)\n",
-            "Building wheels for collected packages: langid\n",
-            "  Building wheel for langid (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for langid: filename=langid-1.1.6-py3-none-any.whl size=1941171 sha256=1395d434614e8a0355587e8c8ac7fa43ea341e719c3616601062a94545259bc8\n",
-            "  Stored in directory: /root/.cache/pip/wheels/3c/bc/9d/266e27289b9019680d65d9b608c37bff1eff565b001c977ec5\n",
-            "Successfully built langid\n",
-            "Installing collected packages: langid\n",
-            "Successfully installed langid-1.1.6\n"
+            "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.12/dist-packages (from markdown-it-py>=2.2.0->rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy) (0.1.2)\n"
           ]
         }
       ]
@@ -174,22 +164,28 @@
         "# pip install requests spacy langid\n",
         "\n",
         "import re, unicodedata, json\n",
-        "from typing import List, Dict, Any, Tuple\n",
+        "from typing import List, Dict, Any, Tuple, Optional\n",
         "\n",
         "import requests\n",
         "import spacy\n",
-        "import langid"
+        "import langid\n",
+        "\n",
+        "try:\n",
+        "  from google.colab import files\n",
+        "  IN_COLAB = True\n",
+        "except:\n",
+        "  IN_COLAB = False"
       ],
       "metadata": {
         "id": "_4ibh6-tsb-n"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 2: Fetch Input from a Museum API\n",
+        "# Step 2a: Fetch Input from a Museum API\n",
         "\n",
         "Get artworks from the Cleveland Museum of Art API (by ID or keyword), or use local text examples."
       ],
@@ -233,7 +229,7 @@
       "metadata": {
         "id": "bOSpuE_xsvgX"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -260,9 +256,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B1rjBgsgwkM4",
-        "outputId": "3a6f0564-173f-4784-82cf-d40ff0b499d8"
+        "outputId": "a139382e-f994-4ce0-9fc4-627bd1f27bec"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,9 +284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DJ4znY_jxFnK",
-        "outputId": "aa5d604f-7a13-47e2-edac-6f503bf88376"
+        "outputId": "fdfd7a62-19f3-4981-f3fe-1c62d23bfe93"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,6 +305,39 @@
       "metadata": {
         "id": "ijx_QAqxTOG4"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2b: Using your own data\n",
+        "\n",
+        "TODO: Add explanatory text here"
+      ],
+      "metadata": {
+        "id": "Lzj6mlz-IiFw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fetch_local(source: Optional[str] = None):\n",
+        "  if IN_COLAB:\n",
+        "    # Upload a text file to use your own data\n",
+        "    uploaded = files.upload()\n",
+        "    text = list(uploaded.values)[0].decode(\"utf-8\")\n",
+        "  else:\n",
+        "    # If running on your local machine, pass the location of the text file\n",
+        "    with open(source, \"r\") as f:\n",
+        "      text  = f.read().strip()\n",
+        "\n",
+        "  return [{\"text\": text}]\n",
+        ""
+      ],
+      "metadata": {
+        "id": "ouNfxHoAIob9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -353,9 +382,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sw9jFDPTxflU",
-        "outputId": "3b34cc0a-69fb-4fff-8d3c-34ebe1e38c28"
+        "outputId": "9c24cbae-6690-4ff8-af54-f0d81e006f73"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +418,7 @@
       "metadata": {
         "id": "CU7wQCewxyWc"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -404,9 +433,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3U0q26bQxzKQ",
-        "outputId": "fdc4eb52-074b-45b0-9d74-501c5de868c5"
+        "outputId": "29d7d174-2287-429a-964e-d19e75582c0c"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +554,7 @@
       "metadata": {
         "id": "e6xknyGKwQJz"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -3663,228 +3692,6 @@
             "  }\n",
             "]\n",
             "Results saved in /content/output_local.json\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# upload a file from your computer into the /content folder of the Colab notebook.\n",
-        "# this step will enable you to run option D with your own .txt file.\n",
-        "\n",
-        "from google.colab import files\n",
-        "uploaded = files.upload()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 69
-        },
-        "id": "NsA-AnDUzhlR",
-        "outputId": "1a39ef92-572c-42e9-804b-96c3bfa23d3d"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "\n",
-              "     <input type=\"file\" id=\"files-cabe9ce2-be05-4e7d-b0f4-c149098cb42a\" name=\"files[]\" multiple disabled\n",
-              "        style=\"border:none\" />\n",
-              "     <output id=\"result-cabe9ce2-be05-4e7d-b0f4-c149098cb42a\">\n",
-              "      Upload widget is only available when the cell has been executed in the\n",
-              "      current browser session. Please rerun this cell to enable.\n",
-              "      </output>\n",
-              "      <script>// Copyright 2017 Google LLC\n",
-              "//\n",
-              "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-              "// you may not use this file except in compliance with the License.\n",
-              "// You may obtain a copy of the License at\n",
-              "//\n",
-              "//      http://www.apache.org/licenses/LICENSE-2.0\n",
-              "//\n",
-              "// Unless required by applicable law or agreed to in writing, software\n",
-              "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-              "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-              "// See the License for the specific language governing permissions and\n",
-              "// limitations under the License.\n",
-              "\n",
-              "/**\n",
-              " * @fileoverview Helpers for google.colab Python module.\n",
-              " */\n",
-              "(function(scope) {\n",
-              "function span(text, styleAttributes = {}) {\n",
-              "  const element = document.createElement('span');\n",
-              "  element.textContent = text;\n",
-              "  for (const key of Object.keys(styleAttributes)) {\n",
-              "    element.style[key] = styleAttributes[key];\n",
-              "  }\n",
-              "  return element;\n",
-              "}\n",
-              "\n",
-              "// Max number of bytes which will be uploaded at a time.\n",
-              "const MAX_PAYLOAD_SIZE = 100 * 1024;\n",
-              "\n",
-              "function _uploadFiles(inputId, outputId) {\n",
-              "  const steps = uploadFilesStep(inputId, outputId);\n",
-              "  const outputElement = document.getElementById(outputId);\n",
-              "  // Cache steps on the outputElement to make it available for the next call\n",
-              "  // to uploadFilesContinue from Python.\n",
-              "  outputElement.steps = steps;\n",
-              "\n",
-              "  return _uploadFilesContinue(outputId);\n",
-              "}\n",
-              "\n",
-              "// This is roughly an async generator (not supported in the browser yet),\n",
-              "// where there are multiple asynchronous steps and the Python side is going\n",
-              "// to poll for completion of each step.\n",
-              "// This uses a Promise to block the python side on completion of each step,\n",
-              "// then passes the result of the previous step as the input to the next step.\n",
-              "function _uploadFilesContinue(outputId) {\n",
-              "  const outputElement = document.getElementById(outputId);\n",
-              "  const steps = outputElement.steps;\n",
-              "\n",
-              "  const next = steps.next(outputElement.lastPromiseValue);\n",
-              "  return Promise.resolve(next.value.promise).then((value) => {\n",
-              "    // Cache the last promise value to make it available to the next\n",
-              "    // step of the generator.\n",
-              "    outputElement.lastPromiseValue = value;\n",
-              "    return next.value.response;\n",
-              "  });\n",
-              "}\n",
-              "\n",
-              "/**\n",
-              " * Generator function which is called between each async step of the upload\n",
-              " * process.\n",
-              " * @param {string} inputId Element ID of the input file picker element.\n",
-              " * @param {string} outputId Element ID of the output display.\n",
-              " * @return {!Iterable<!Object>} Iterable of next steps.\n",
-              " */\n",
-              "function* uploadFilesStep(inputId, outputId) {\n",
-              "  const inputElement = document.getElementById(inputId);\n",
-              "  inputElement.disabled = false;\n",
-              "\n",
-              "  const outputElement = document.getElementById(outputId);\n",
-              "  outputElement.innerHTML = '';\n",
-              "\n",
-              "  const pickedPromise = new Promise((resolve) => {\n",
-              "    inputElement.addEventListener('change', (e) => {\n",
-              "      resolve(e.target.files);\n",
-              "    });\n",
-              "  });\n",
-              "\n",
-              "  const cancel = document.createElement('button');\n",
-              "  inputElement.parentElement.appendChild(cancel);\n",
-              "  cancel.textContent = 'Cancel upload';\n",
-              "  const cancelPromise = new Promise((resolve) => {\n",
-              "    cancel.onclick = () => {\n",
-              "      resolve(null);\n",
-              "    };\n",
-              "  });\n",
-              "\n",
-              "  // Wait for the user to pick the files.\n",
-              "  const files = yield {\n",
-              "    promise: Promise.race([pickedPromise, cancelPromise]),\n",
-              "    response: {\n",
-              "      action: 'starting',\n",
-              "    }\n",
-              "  };\n",
-              "\n",
-              "  cancel.remove();\n",
-              "\n",
-              "  // Disable the input element since further picks are not allowed.\n",
-              "  inputElement.disabled = true;\n",
-              "\n",
-              "  if (!files) {\n",
-              "    return {\n",
-              "      response: {\n",
-              "        action: 'complete',\n",
-              "      }\n",
-              "    };\n",
-              "  }\n",
-              "\n",
-              "  for (const file of files) {\n",
-              "    const li = document.createElement('li');\n",
-              "    li.append(span(file.name, {fontWeight: 'bold'}));\n",
-              "    li.append(span(\n",
-              "        `(${file.type || 'n/a'}) - ${file.size} bytes, ` +\n",
-              "        `last modified: ${\n",
-              "            file.lastModifiedDate ? file.lastModifiedDate.toLocaleDateString() :\n",
-              "                                    'n/a'} - `));\n",
-              "    const percent = span('0% done');\n",
-              "    li.appendChild(percent);\n",
-              "\n",
-              "    outputElement.appendChild(li);\n",
-              "\n",
-              "    const fileDataPromise = new Promise((resolve) => {\n",
-              "      const reader = new FileReader();\n",
-              "      reader.onload = (e) => {\n",
-              "        resolve(e.target.result);\n",
-              "      };\n",
-              "      reader.readAsArrayBuffer(file);\n",
-              "    });\n",
-              "    // Wait for the data to be ready.\n",
-              "    let fileData = yield {\n",
-              "      promise: fileDataPromise,\n",
-              "      response: {\n",
-              "        action: 'continue',\n",
-              "      }\n",
-              "    };\n",
-              "\n",
-              "    // Use a chunked sending to avoid message size limits. See b/62115660.\n",
-              "    let position = 0;\n",
-              "    do {\n",
-              "      const length = Math.min(fileData.byteLength - position, MAX_PAYLOAD_SIZE);\n",
-              "      const chunk = new Uint8Array(fileData, position, length);\n",
-              "      position += length;\n",
-              "\n",
-              "      const base64 = btoa(String.fromCharCode.apply(null, chunk));\n",
-              "      yield {\n",
-              "        response: {\n",
-              "          action: 'append',\n",
-              "          file: file.name,\n",
-              "          data: base64,\n",
-              "        },\n",
-              "      };\n",
-              "\n",
-              "      let percentDone = fileData.byteLength === 0 ?\n",
-              "          100 :\n",
-              "          Math.round((position / fileData.byteLength) * 100);\n",
-              "      percent.textContent = `${percentDone}% done`;\n",
-              "\n",
-              "    } while (position < fileData.byteLength);\n",
-              "  }\n",
-              "\n",
-              "  // All done.\n",
-              "  yield {\n",
-              "    response: {\n",
-              "      action: 'complete',\n",
-              "    }\n",
-              "  };\n",
-              "}\n",
-              "\n",
-              "scope.google = scope.google || {};\n",
-              "scope.google.colab = scope.google.colab || {};\n",
-              "scope.google.colab._files = {\n",
-              "  _uploadFiles,\n",
-              "  _uploadFilesContinue,\n",
-              "};\n",
-              "})(self);\n",
-              "</script> "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saving input.txt to input (1).txt\n"
           ]
         }
       ]
