added some prose and testing hide-input cells

--- a/notebooks/tasks/disambiguation-candidates.ipynb
+++ b/notebooks/tasks/disambiguation-candidates.ipynb
@@ -5,7 +5,7 @@
    "id": "3c6a1c79",
    "metadata": {},
    "source": [
-    "## Disambiguation with Candidates\n",
+    "# Disambiguation with Candidates\n",
     "\n",
     "When using LLMs, we can leverage context to help determine correct identifiers for entities found. One of the largest challenges with LLMs is getting them to generate the correct identifier for specific entities. Without context, an LLM will confidently generate a believable looking identifier code. When checked, however, users will often find these codes do not exist or are entirely wrong.\n",
     "\n",
@@ -14,6 +14,34 @@
     "In this notebook, we will explore the first of these options, where we provide the LLM with a list of candidates that were generated in the previous data notebook. To make things easier, we have pasted the output from that notebook here.\n",
     "\n",
     "It is also worth noting that providing the LLM with the necessary context is often quite cheaper (assuming you are using a paid-model), than letting the model agentically query the web or use other tools. We will see this in the next notebook.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7ce3540",
+   "metadata": {},
+   "source": [
+    "## Installing Packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37a02df6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pydantic openai spacy pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee5ed19c",
+   "metadata": {},
+   "source": [
+    "## Getting our ENV Varaibles.\n",
+    "\n",
+    "First, we need to set up our environment variables to access the OpenAI API. We'll use the python-dotenv package to load environment variables from a .env file, which should contain our OPENAI_API_KEY. This keeps our API key secure by not hardcoding it directly in our code."
    ]
   },
   {
@@ -52,10 +80,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f0fd6d2",
+   "metadata": {},
+   "source": [
+    "## Visualization Functions\n",
+    "\n",
+    "This bit of code is just for making it easier to visualize our data at the end of the notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "74853169",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "import re\n",
