--- a/notebooks/tasks/disambiguation-web.ipynb
+++ b/notebooks/tasks/disambiguation-web.ipynb
@@ -5,14 +5,42 @@
    "id": "3c6a1c79",
    "metadata": {},
    "source": [
-    "## Disambiguation\n",
+    "# Disambiguation with Tool Calling\n",
     "\n",
-    "In this notebook...\n"
+    "In this notebook, we explore entity disambiguation using GPT-4o's tool calling capabilities. Rather than providing a list of candidates, we leverage GPT-4's ability to search the web and directly find the correct Wikidata IDs for entities. This approach combines the power of large language models with real-time web access to accurately link entity mentions to their corresponding Wikidata entries. We'll demonstrate how to use this method to disambiguate geographic locations and other named entities in text, providing a more automated and scalable approach to entity linking.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ee02bc5",
+   "metadata": {},
+   "source": [
+    "## Installing Packages\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "2f610b74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pydantic openai spacy pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1d34b26",
+   "metadata": {},
+   "source": [
+    "## Getting our ENV Varaibles.\n",
+    "\n",
+    "First, we need to set up our environment variables to access the OpenAI API. We'll use the python-dotenv package to load environment variables from a .env file, which should contain our OPENAI_API_KEY. This keeps our API key secure by not hardcoding it directly in our code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "72869171",
    "metadata": {},
    "outputs": [],
@@ -23,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "31b14d7e",
    "metadata": {},
    "outputs": [],
@@ -32,12 +60,13 @@
     "import os\n",
     "from openai import OpenAI\n",
     "from pydantic import BaseModel\n",
-    "import json"
+    "import json\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "63fb0248",
    "metadata": {},
    "outputs": [],
@@ -47,10 +76,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "74853169",
+   "cell_type": "markdown",
+   "id": "18df13d4",
    "metadata": {},
+   "source": [
+    "## Visualization Functions\n",
+    "\n",
+    "This bit of code is just for making it easier to visualize our data at the end of the notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "74853169",
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "import re\n",
@@ -176,8 +219,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e809c736",
+   "metadata": {},
+   "source": [
+    "## Connect to OpenAI Client"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "626edad0",
    "metadata": {},
    "outputs": [],
@@ -186,20 +237,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61373760",
+   "metadata": {},
+   "source": [
+    "## Define Notebook Varaibles."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "68e86d39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL = \"gpt-4o-mini\"\n",
     "TEXT = \"They marched from [Alexandria](LOCATION) through [Memphis](LOCATION) via the [Nile](LOCATION) to [Thebes](LOCATION).\"\n",
     "ENTITY_TO_IDENTIFY = \"Memphis\""
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9dab315",
+   "metadata": {},
+   "source": [
+    "## Crafting the Prompt"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "94acadd0",
    "metadata": {},
    "outputs": [],
@@ -225,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "2f4ebaf7",
    "metadata": {},
    "outputs": [],
@@ -235,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "a9bac810",
    "metadata": {},
    "outputs": [
@@ -268,8 +334,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18c8ef18",
+   "metadata": {},
+   "source": [
+    "## Calling OpenAI"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "0be66c1b",
    "metadata": {},
    "outputs": [],
@@ -286,8 +360,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e9a9180",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "39ea07a6",
    "metadata": {},
    "outputs": [
@@ -301,8 +381,8 @@
       "  \"label\": \"Memphis\",\n",
       "  \"wikidata_id\": \"Q5715\",\n",
       "  \"sources\": [\n",
-      "    \"Wikidata entry for ancient capital of Inebu-hedj, Egypt\",\n",
-      "    \"UNT Digital Library ”Egypt – Giza Governorate – Memphis\\\" for Wikidata link Q5715\"\n",
+      "    \"turn0search0\",\n",
+      "    \"turn0search2\"\n",
       "  ]\n",
       "}\n",
       "```\n"
@@ -314,8 +394,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73af4f81",
+   "metadata": {},
+   "source": [
+    "## Parsing the Output"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "7c3db775",
    "metadata": {},
    "outputs": [
@@ -323,7 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'entity_text': 'Memphis', 'label': 'Memphis', 'wikidata_id': 'Q5715', 'sources': ['Wikidata entry for ancient capital of Inebu-hedj, Egypt', 'UNT Digital Library ”Egypt – Giza Governorate – Memphis\" for Wikidata link Q5715']}\n"
+      "{'entity_text': 'Memphis', 'label': 'Memphis', 'wikidata_id': 'Q5715', 'sources': ['turn0search0', 'turn0search2']}\n"
      ]
     }
    ],
@@ -332,15 +420,23 @@
     "    json_data = text.split(\"```json\")[1]\n",
     "    json_data, sources = json_data.split(\"```\")\n",
     "    json_data = json.loads(json_data)\n",
-    "    return json_sdata, sources\n",
+    "    return json_data, sources\n",
     "\n",
     "json_output, sources = parse_json_with_sources(output_text)\n",
     "print(json_output)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a8f6c35",
+   "metadata": {},
+   "source": [
+    "## Visualizing the Output"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "a50d0493",
    "metadata": {},
    "outputs": [],
@@ -351,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "603d5ab4",
    "metadata": {},
    "outputs": [
@@ -361,7 +457,7 @@
        "'They marched from [Alexandria](LOCATION) through [Memphis](LOCATION) via the [Nile](LOCATION) to [Thebes](LOCATION).'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "2f8c215a",
    "metadata": {},
    "outputs": [
@@ -380,7 +476,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W0912 09:27:14.353000 43069 site-packages/torch/distributed/elastic/multiprocessing/redirects.py:29] NOTE: Redirects are currently not supported in Windows or MacOs.\n"
+      "W0912 11:24:19.624000 89480 site-packages/torch/distributed/elastic/multiprocessing/redirects.py:29] NOTE: Redirects are currently not supported in Windows or MacOs.\n"
      ]
     }
    ],
@@ -391,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "f8622fc2",
    "metadata": {},
    "outputs": [],
@@ -401,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "60d3aaf2",
    "metadata": {},
    "outputs": [
@@ -444,32 +540,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "id": "8c9a172e",
    "metadata": {},
    "outputs": [],
    "source": [
     "output_ents = []\n",
+    "pandas_output = []\n",
     "for ent in doc.ents:\n",
     "    if ent.text == ENTITY_TO_IDENTIFY:\n",
-    "        output_ents.append({\"start\": ent.start_char, \"end\": ent.end_char, \"label\": f'{ent.label_} <a href=\"https://www.wikidata.org/wiki/{json_output[\"wikidata_id\"]}\">{json_output[\"wikidata_id\"]}</a>'})\n"
+    "        output_ents.append({\"start\": ent.start_char, \"end\": ent.end_char, \"label\": f'{ent.label_} <a href=\"https://www.wikidata.org/wiki/{json_output[\"wikidata_id\"]}\">{json_output[\"wikidata_id\"]}</a>'})\n",
+    "        pandas_output.append({\"start\": ent.start_char, \"end\": ent.end_char, \"label\": f'{ent.label_}', 'wikidata_id': json_output[\"wikidata_id\"]})\n",
+    "    else:\n",
+    "        output_ents.append({\"start\": ent.start_char, \"end\": ent.end_char, \"label\": ent.label_, 'wikidata_id': None})\n",
+    "        pandas_output.append({\"start\": ent.start_char, \"end\": ent.end_char, \"label\": ent.label_, 'wikidata_id': None})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "id": "83f8ed1f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">They marched from Alexandria through \n",
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">They marched from \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Alexandria\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOCATION</span>\n",
+       "</mark>\n",
+       " through \n",
        "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
        "    Memphis\n",
        "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOCATION <a href=\"https://www.wikidata.org/wiki/Q5715\">Q5715</a></span>\n",
        "</mark>\n",
-       " via the Nile to Thebes .</div></span>"
+       " via the \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Nile\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOCATION</span>\n",
+       "</mark>\n",
+       " to \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Thebes\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOCATION</span>\n",
+       "</mark>\n",
+       " .</div></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -491,16 +607,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "265856e8",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start</th>\n",
+       "      <th>end</th>\n",
+       "      <th>label</th>\n",
+       "      <th>wikidata_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18</td>\n",
+       "      <td>28</td>\n",
+       "      <td>LOCATION</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37</td>\n",
+       "      <td>44</td>\n",
+       "      <td>LOCATION</td>\n",
+       "      <td>Q5715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53</td>\n",
+       "      <td>57</td>\n",
+       "      <td>LOCATION</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>61</td>\n",
+       "      <td>67</td>\n",
+       "      <td>LOCATION</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   start  end     label wikidata_id\n",
+       "0     18   28  LOCATION        None\n",
+       "1     37   44  LOCATION       Q5715\n",
+       "2     53   57  LOCATION        None\n",
+       "3     61   67  LOCATION        None"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(pandas_output)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1a7112b7",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(\"../../output/entities-disambiguation-web.csv\", index=False)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a7112b7",
+   "id": "64244817",
    "metadata": {},
    "outputs": [],
    "source": []
